# ai-master-python

./: .env.example  .gitignore  Makefile  README.md  add_config_tag.py  add_firebase_tags.py  alembic.ini  fix_encoding.py  pyproject.toml  requirements.txt  serve.py  vercel.json  verify.py
alembic/: env.py
app/: __init__.py  config.py  dependencies.py  main.py
app/api/v1/: auth.py  certificates.py  chat.py  community.py  courses.py  interviews.py  jobs.py  progress.py  projects.py  resumes.py  users.py
app/core/: __init__.py  exceptions.py  logging.py  middleware.py  permissions.py  security.py
app/integrations/: firebase_admin.py  google_oauth.py
app/models/: __init__.py  admin.py  ai_generation.py  base.py  certificate.py  chat.py  course.py  lesson.py  progress.py  project.py  resume.py  user.py  video_session.py
app/schemas/: __init__.py  auth.py  certificate.py  chat.py  common.py  course.py  interview.py  progress.py  project.py  resume.py  user.py
app/services/: auth_service.py  learning_service.py  user_service.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
frontend/: index.html
frontend/css/: design-system.css  layout.css
frontend/js/: api.js  app.js  config.js  firebase.js
frontend/pages/: certificates.html  chat.html  community.html  courses.html  dashboard.html  interview.html  jobs.html  lesson.html  login.html  progress.html  projects.html  resume.html  tutor.html
scripts/: seed_data.py
