[project]
name = "ai-master-python"
version = "0.1.0"
description = "AI-powered Python learning platform with adaptive tutoring, real-time voice sessions, and comprehensive course management."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "AI Master Team" }]

dependencies = [
    # Web framework & server
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database & ORM
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Data validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "firebase-admin>=6.5.0",

    # HTTP client
    "httpx>=0.27.0",

    # Caching & task queue
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.4.0",

    # Logging
    "structlog>=24.1.0",

    # PDF generation & templating
    "weasyprint>=62.0",
    "jinja2>=3.1.0",

    # File uploads & image processing
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",

    # AI & real-time communication
    "google-genai>=1.0.0",
    "livekit>=0.11.0",
    "livekit-agents>=0.8.0",

    # S3-compatible object storage
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx",           # used by fastapi.testclient for async tests
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Ruff – fast Python linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print (catch stray print statements)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line-too-long – handled by formatter
    "B008",   # do not perform function calls in argument defaults (needed for Depends())
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-ra",            # show extra test summary for all except passed
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests that are slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]

# ---------------------------------------------------------------------------
# MyPy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redis.*", "livekit.*", "weasyprint.*", "google.*", "boto3.*"]
ignore_missing_imports = true
[tool.hatch.build.targets.wheel]
packages = ["app"]
